--- a/HomeTempMonitor/index.html
+++ b/HomeTempMonitor/index.html
@@ -2,212 +2,107 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>Bean House Temperature Log</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, target-densitydpi=medium-dpi" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-title" content="Bean House Temperature Log" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <link rel="apple-touch-icon" href="Mobile/touch-icon-iphone.png" />
+    <link rel="apple-touch-icon" sizes="76x76" href="Mobile/touch-icon-ipad.png" />
+    <link rel="apple-touch-icon" sizes="120x120" href="Mobile/touch-icon-iphone-retina.png" />
+    <link rel="apple-touch-icon" sizes="152x152" href="Mobile/touch-icon-ipad-retina.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="Mobile/touch-icon-iphone-retina-3x.png" />
+    <link rel="stylesheet" href="Css/common.css" />
+    <link rel="stylesheet" media="all and (min-device-width: 320px) and (max-device-width: 736px) and (orientation: portrait)" href="Css/iphone-portrait.css" />
+    <link rel="stylesheet" media="all and (min-device-width: 320px) and (max-device-width: 736px) and (orientation: landscape)" href="Css/iphone-landscape.css" />
+    <link rel="stylesheet" media="all and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait)" href="Css/ipad-portrait.css" />
+    <link rel="stylesheet" media="all and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape)" href="Css/ipad-landscape.css" />
+    <link rel="stylesheet" media="all and (min-device-width: 1025px)" href="Css/desktop.css" />
     <script type="text/javascript" src="Scripts/date.format.js"></script>
     <script type="text/javascript" src="Scripts/jquery-2.1.3.min.js"></script>
     <script type="text/javascript" src="Scripts/canvasjs.min.js"></script>
+    <script type="text/javascript" src="Scripts/homeTemp.js"></script>
     <script type="text/javascript">
-        //var renderStart = Date.now();
-        var dtFormat = "m/d/yyyy h:MM TT";
-        var dataSet;
+        if (navigator.userAgent.match(/(iPhone|iPad|Android)/)) {
+            var fileref = document.createElement("script");
+            fileref.setAttribute("type", "text/javascript")
+            fileref.setAttribute("src", "Scripts/jquery.mobile-1.4.5.min.js")
+            if (typeof fileref !== "undefined") {
+                document.getElementsByTagName("head")[0].appendChild(fileref);
+            }
 
-        if (screen.width <= 1024)
-            window.location = "Mobile/";
-
-        function loadCurrentTemps() {
-            $.getJSON("CurrentTemps", function (data) {
-                $.each(data, function (key, val) {
-                    if (key == "Inside") {
-                        $("#insideTemp").text(val.toFixed(2));
-                    }
-                });
-            });
-        }
-        setInterval("loadCurrentTemps()", 60000);
-
-        function loadTempData() {
-            $.getJSON("Temps/" + $("#lstDataRange").val(), function (data) {
-                $.each(data, function (key, val) {
-                    if (key == "AverageTemp") {
-                        $("#averageTemp").text(val.toFixed(2) + " °F");
-                    }
-                    else if (key == "MaximumTemp") {
-                        $("#maxTemp").text(val["Temperature"].toFixed(2) + " °F");
-                        $("#maxTempDate").text(dateFormat(new Date(val["Recorded"]), dtFormat));
-                    }
-                    else if (key == "MinimumTemp") {
-                        $("#minTemp").text(val["Temperature"].toFixed(2) + " °F");
-                        $("#minTempDate").text(dateFormat(new Date(val["Recorded"]), dtFormat));
-                    }
-                    else if (key == "LastHour") {
-                        var tblTempBody = $("#tblLastTemps tbody");
-                        tblTempBody.html("");
-                        $.each(val, function (k, v) {
-                            var newRow = $("<tr>");
-                            $("<td>").addClass("temp").text(dateFormat(new Date(v["Recorded"]), dtFormat)).appendTo(newRow);
-                            $("<td>").addClass("temp").text(v["Temperature"].toFixed(2) + " °F").appendTo(newRow);
-                            tblTempBody.append(newRow);
-                        });
-                    }
-                    else if (key == "DataSet") {
-                        dataSet = [];
-                        $.each(val, function (k, v) {
-                            var newDataPoint = {};
-                            newDataPoint["x"] = new Date(v["Recorded"]);
-                            newDataPoint["y"] = v["Temperature"];
-                            dataSet.push(newDataPoint);
-                        });
-                        renderChart();
-                    }
-                });
-            });
-            $("#updatedTime").text(dateFormat(Date.now(), "m/d/yyyy h:MM:ss TT"));
-        }
-        setInterval("loadTempData()", 900000);
-
-        function renderChart() {
-            $("#chart_div").html("");
-            var chart = new CanvasJS.Chart("chart_div", {
-                data: [
-                    {
-                        type: "line",
-                        markerType: "none",
-                        color: "blue",
-                        lineThickness: 1,
-                        dataPoints: dataSet
-                    }
-                ],
-                axisY: {
-                    title: "Temperature (°F)",
-                    titleFontSize: 18,
-                    titleFontStyle: "italic",
-                    labelFontSize: 12,
-                    includeZero: false
-                },
-                axisX: {
-                    labelAngle: -45,
-                    labelFontSize: 12,
-                    valueFormatString: "M/D/YYYY h:mm TT"
-                },
-                toolTip: {
-                    content: "Recorded: {x}<br/>Temperature: {y} °F"
-                }
-            });
-
-            chart.render();
-        }
-
-        window.onload = function () {
-            loadCurrentTemps();
-            loadTempData();
-
-            //$("#renderTime").text(Date.now()-renderStart);
+            var mobileCss = document.createElement("link");
+            mobileCss.setAttribute("rel", "stylesheet");
+            mobileCss.setAttribute("href", "Content/jquery.mobile-1.4.5.min.css");
+            if (typeof mobileCss !== "undefined") {
+                document.getElementsByTagName("head")[0].appendChild(mobileCss);
+            }
         }
     </script>
-    <style>
-        html {
-            padding: 0px;
-            margin: 0px;
-        }
-
-        body {
-            background-color: #f9f9f9;
-            font-family: sans-serif;
-            padding: 10px;
-            margin: 0px;
-        }
-
-        table.temp {
-            width: 100%;
-            margin-bottom: 12px;
-        }
-
-        caption {
-            font-weight: bold;
-            font-size: 24px;
-        }
-
-        td.temp {
-            text-align: center;
-        }
-
-        div.chartarea {
-            width: 100%;
-        }
-    </style>
 </head>
 <body>
-    <div style="width:100%;">
-        <div style="text-align:center;"><h1>Bean House Temperature Log</h1></div>
-        <div class="chartarea">
-            <form id="form1">
-                <div style="width:100%;text-align:center;">
-                    <p style="font-size:20px;"><strong>Current Temperature: </strong><span id="insideTemp"></span> °F</p>
-                    Time Range:
-                    <select id="lstDataRange" style="height:19px;width:209px;" onchange="loadTempData()">
-                        <option selected="selected" value="24">Last 24 Hours</option>
-                        <option value="48">Last 48 Hours</option>
-                        <option value="168">Last Week</option>
-                        <option value="720">Last Month</option>
-                        <option value="2160">Last 3 Months</option>
-                        <option value="4320">Last 6 Months</option>
-                        <option value="8760">Last Year</option>
-                    </select>
-                </div>
-            </form>
-
-            <div>
-                <h2 style="padding-left:2.5%">Temperature Chart</h2>
-                <div style="text-align:center;">
-                    <div id="chart_div" style="margin:0 auto;width:95%;height:600px;"></div>
-                </div>
+    <div id="mainContainer">
+        <div style="text-align:center;">
+            <span id="pageTitle">Bean House Temperature Log</span>
+            <p class="currentTemps"><strong>Current Temp<span class="fullWords">erature</span>: </strong><span id="insideTemp"></span> °F</p>
+            <div id="lstDiv">
+                <span id="lblTimeRange">Time Range:</span>
+                <select id="lstDataRange" onchange="getLineThickness(); loadTempData();" data-icon="false">
+                    <option selected="selected" value="24">Last 24 Hours</option>
+                    <option value="48">Last 48 Hours</option>
+                    <option value="168">Last Week</option>
+                    <option value="720">Last Month</option>
+                    <option value="2160">Last 3 Months</option>
+                    <option value="4320">Last 6 Months</option>
+                    <option value="8760">Last Year</option>
+                </select>
             </div>
         </div>
-        <div style="margin-top:12px;">
-            <table style="margin:0 auto;width:50%;">
-                <tr>
-                    <td style="width:50%;">
-                        <table class="temp">
-                            <caption class="temp">Minimum Temperature</caption>
-                            <tbody>
-                                <tr>
-                                    <td id="minTempDate" class="temp"></td>
-                                    <td id="minTemp" class="temp"></td>
-                                </tr>
-                            </tbody>
-                        </table>
-                        <table class="temp">
-                            <caption style="font-weight:bold;font-size:24px;">Maximum Temperature</caption>
-                            <tbody>
-                                <tr>
-                                    <td id="maxTempDate" class="temp"></td>
-                                    <td id="maxTemp" class="temp"></td>
-                                </tr>
-                            </tbody>
-                        </table>
-                        <table class="temp">
-                            <caption class="temp">Average Temperature</caption>
-                            <tbody>
-                                <tr>
-                                    <td id="averageTemp" class="temp"></td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </td>
-                    <td style="width:50%">
-                        <table id="tblLastTemps" class="temp">
-                            <caption>Readings For Last Hour</caption>
-                            <thead>
-                                <tr><th>Date/Time</th><th>Temperature</th></tr>
-                            </thead>
-                            <tbody></tbody>
-                        </table>
-                    </td>
-                </tr>
-            </table>
+        <div id="chartArea">
+            <span id="chartTitle">Temperature Chart</span>
+            <div id="chart_div"></div>
         </div>
-        <table>
+        <div id="statsArea">
+            <div id="minMaxAvg" class="tblContainer">
+                <table class="statsTable minMaxAvgTable">
+                    <caption>Min<span class="fullWords">imum</span> Temp<spanclass class="fullWords">erature</spanclass></caption>
+                    <tbody>
+                        <tr>
+                            <td id="minTempDate"></td>
+                            <td id="minTemp"></td>
+                        </tr>
+                    </tbody>
+                </table>
+                <table class="statsTable minMaxAvgTable maxAvgTable">
+                    <caption>Max<spanclass class="fullWords">imum</spanclass> Temp<span class="fullWords">erature</span></caption>
+                    <tbody>
+                        <tr>
+                            <td id="maxTempDate"></td>
+                            <td id="maxTemp"></td>
+                        </tr>
+                    </tbody>
+                </table>
+                <table class="statsTable minMaxAvgTable maxAvgTable">
+                    <caption>Av<span class="fullWords">era</span>g<span class="fullWords">e</span> Temp<span class="fullWords">erature</span></caption>
+                    <tbody>
+                        <tr>
+                            <td id="averageTemp"></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <div id="lastHour" class="tblContainer">
+                <table id="tblLastTemps" class="statsTable">
+                    <caption><span class="fullWords">Readings For </span>Last Hour</caption>
+                    <thead>
+                        <tr><th>Date/Time</th><th>Temperature</th></tr>
+                    </thead>
+                    <tbody></tbody>
+                </table>
+            </div>
+        </div>
+        <table id="tblUpdated">
             <tr>
-                <td style="width:50px">Updated:</td>
+                <td id="lblUpdated">Updated:</td>
                 <td id="updatedTime"></td>
             </tr>
         </table>
